# ASG200_App

./: README.md
Hardware/wiznet_asg200/: wiznet_asg200.json
Hardware/wiznet_asg200/inc/hw/: wiznet_asg200.h
Software/WIZASG200_HLApp_AzureIoT/: CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json  launch.vs.json  main.c
Software/WIZASG200_RTApp_W5500_SPI_BareMetal/: CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json  launch.vs.json  main.c
Utils/MT3620_M4_Driver/: CMakeLists.txt
Utils/WIZnet_Driver/ioLibrary_Driver/Application/loopback/: loopback.c  loopback.h
Utils/WIZnet_Driver/ioLibrary_Driver/Ethernet/: socket.c  socket.h  wizchip_conf.c
Utils/WIZnet_Driver/ioLibrary_Driver/Ethernet/W5500/: w5500-dbg.c  w5500-dbg.h  w5500.c  w5500.h
Utils/WIZnet_Driver/ioLibrary_Driver/Internet/DHCP/: dhcp.c  dhcps.c  dhcps.h
Utils/WIZnet_Driver/ioLibrary_Driver/Internet/SNTP/: sntps.c  sntps.h
